--- a/public/index.html
+++ b/public/index.html
@@ -493,10 +493,10 @@
             const phone = document.getElementById('phone').value;
             const message = document.getElementById('message').value;
 
-            const response = await fetch('http://localhost:3001/api/contact', {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({ name, email, phone, message })
+            const response = await fetch('https://shubam-khunger.onrender.com/api/contact', {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({ name, email, phone, message })
             });
 
             // Create success message
